# challenge

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  example.env  pyproject.toml
.github/workflows/: lint_and_test.yaml  push_to_docker_hub.yaml
app/: conftest.py  main.py  models.py
app/api/v1/: billing.py  contract.py  crud.py  products.py  tenants.py
app/api/v1/schemas/: base.py  billing.py  contract.py  products.py  tenants.py
app/api/v1/tests/: test_billing.py  test_contracts.py  test_crud.py  test_products.py  test_tenants.py
app/core/: database.py  enums.py  exceptions.py  logging.py  models.py  settings.py
migrations/: env.py  script.py.mako
migrations/versions/: 58c31ce7eb13_init_database.py  5920dcc0f461_add_models_to_save_billing.py  9adab394d6fe_initial_migration.py  f08747241435_init_migration.py
